tests/snapshots/integration_tests__snapshot_tests__array_standard_password.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_standard_password.vmt",
    status: Good,
    used_instantiations: [],
}
