tests/snapshots/integration_tests__snapshot_tests__array_tiling_pnr2.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_pnr2.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 2 i+0) 2) 10) S) (Read_Int_Int a+0 S))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 2 i+0) 2) 10) Z) (Read_Int_Int a+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 2 i+0) 2) val2+0) 1) (Read_Int_Int a+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 2 i+0) 1) val1+0) 0) (Read_Int_Int a1+0 0))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 2 i+0) 2) val2+0) (- (* 2 i+0) 2)) val2+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 2 i+0) 1) val1+0) (- (* 2 i+0) 1)) val1+0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 2 i+0) 2) 10) (- (* 2 i+0) 2)) 10)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 2 i+0) 1) 10) defval+0) (Read_Int_Int a1+0 defval+0))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 2 i+0) 1) 10) (- (* 2 i+0) 1)) 10)",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 2 i+0) 2) val2+0) 0) (Read_Int_Int a+0 0))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 2 i+0) 1) 10) Z) (Read_Int_Int a1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 2 i+0) 1) val1+0) Z) (Read_Int_Int a1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 2 i+0) 2) val2+0) Z) (Read_Int_Int a+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 2 i+0) 1) val1+0) S) (Read_Int_Int a1+0 S))",
    ],
}
