tests/snapshots/integration_tests__snapshot_tests__array_tiling_pnr3.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_pnr3.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) S) (Read_Int_Int a2+0 S))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) S) (Read_Int_Int a+0 S))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) Z) (Read_Int_Int a2+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) (- (* 3 i+0) 2)) fixval+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) i+1) (Read_Int_Int a1+0 i+1))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) fixval+0) 1) (Read_Int_Int a2+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) fixval+0) (- (* 3 i+0) 1)) fixval+0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) (+ i+0 1)) (Read_Int_Int a+0 (+ i+0 1)))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) fixval+0) defval+1) (Read_Int_Int a2+0 defval+1))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) defval+1) (Read_Int_Int a1+0 defval+1))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) (+ i+0 1)) (Read_Int_Int a1+0 (+ i+0 1)))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) (- (* 3 i+1) 3)) (Read_Int_Int a2+0 (- (* 3 i+1) 3)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) (- (* 3 i+1) 3)) (Read_Int_Int a1+0 (- (* 3 i+1) 3)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) (- (* 3 i+0) 1)) (Read_Int_Int a+0 (- (* 3 i+0) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) (- (* 3 i+0) 1)) (Read_Int_Int a1+0 (- (* 3 i+0) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) (- (* 3 i+0) 3)) val3+0)",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) (- (* 3 i+0) 1)) val1+0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) (* 3 i+0)) (Read_Int_Int a+0 (* 3 i+0)))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) fixval+0) (- (* 3 i+1) 1)) (Read_Int_Int a2+0 (- (* 3 i+1) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) (- (* 3 i+1) 1)) (Read_Int_Int a1+0 (- (* 3 i+1) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) i+1) (Read_Int_Int a+0 i+1))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) fixval+0) (* 3 i+0)) (Read_Int_Int a2+0 (* 3 i+0)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) (* 3 i+0)) (Read_Int_Int a1+0 (* 3 i+0)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) (- (* 3 i+0) 3)) fixval+0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) 3) (Read_Int_Int a+0 3))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) fixval+0) (* 3 i+1)) (Read_Int_Int a2+0 (* 3 i+1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) (- (* 3 i+1) 1)) (Read_Int_Int a+0 (- (* 3 i+1) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) defval+0) (Read_Int_Int a1+0 defval+0))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) (- (* 3 i+1) 1)) (Read_Int_Int a1+0 (- (* 3 i+1) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) 3) (Read_Int_Int a1+0 3))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) (- (* 3 i+0) 2)) val2+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) S) (Read_Int_Int a1+0 S))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) 1) (Read_Int_Int a1+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) (* 3 S)) (Read_Int_Int a1+0 (* 3 S)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) Z) (Read_Int_Int a+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) (* 3 S)) (Read_Int_Int a2+0 (* 3 S)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) S) (Read_Int_Int a1+0 S))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) (- (* 3 i+1) 1)) (Read_Int_Int a+0 (- (* 3 i+1) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) i+2) (Read_Int_Int a+0 i+2))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) (- (* 3 i+1) 1)) (Read_Int_Int a2+0 (- (* 3 i+1) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) Z) (Read_Int_Int a1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) 1) (Read_Int_Int a+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) defval+1) (Read_Int_Int a+0 defval+1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) 1) (Read_Int_Int a+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) fixval+0) (- (* 3 i+2) 1)) (Read_Int_Int a2+0 (- (* 3 i+2) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) (* 3 S)) (Read_Int_Int a+0 (* 3 S)))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) (- (* 3 i+2) 1)) (Read_Int_Int a2+0 (- (* 3 i+2) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) (* 3 i+1)) (Read_Int_Int a+0 (* 3 i+1)))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) i+0) (Read_Int_Int a2+0 i+0))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) 0) (Read_Int_Int a2+0 0))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) (- (* 3 i+2) 1)) (Read_Int_Int a1+0 (- (* 3 i+2) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) fixval+0) Z) (Read_Int_Int a2+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) (- (* 3 i+2) 1)) (Read_Int_Int a+0 (- (* 3 i+2) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) 1) (Read_Int_Int a1+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) fixval+0) (* 3 i+2)) (Read_Int_Int a2+0 (* 3 i+2)))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) 1) (Read_Int_Int a2+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) (* 3 S)) (Read_Int_Int a1+0 (* 3 S)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) (* 3 i+1)) (Read_Int_Int a1+0 (* 3 i+1)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) fixval+0) 2) (Read_Int_Int a1+0 2))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) Z) (Read_Int_Int a1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) (* 3 S)) (Read_Int_Int a+0 (* 3 S)))",
        "(= (Read_Int_Int (Write_Int_Int a+1 (- (* 3 i+1) 3) fixval+1) i+0) (Read_Int_Int a+1 i+0))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) i+0) (Read_Int_Int a+0 i+0))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) defval+1) (Read_Int_Int a1+0 defval+1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) (* 3 i+1)) (Read_Int_Int a+0 (* 3 i+1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) (- (* 3 i+2) 1)) (Read_Int_Int a+0 (- (* 3 i+2) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) (- (* 3 i+3) 1)) (Read_Int_Int a2+0 (- (* 3 i+3) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) 2) (Read_Int_Int a+0 2))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) fixval+0) (+ i+0 1)) (Read_Int_Int a2+0 (+ i+0 1)))",
        "(= (Read_Int_Int (Write_Int_Int a2+1 (- (* 3 i+1) 1) fixval+1) (- (* 3 i+0) 2)) (Read_Int_Int a2+1 (- (* 3 i+0) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a1+1 (- (* 3 i+1) 2) fixval+1) (- (* 3 i+0) 2)) (Read_Int_Int a1+1 (- (* 3 i+0) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) (- (* 3 i+3) 1)) (Read_Int_Int a1+0 (- (* 3 i+3) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 3 i+0) 1) val1+0) i+1) (Read_Int_Int a2+0 i+1))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 3 i+0) 2) val2+0) i+1) (Read_Int_Int a1+0 i+1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) Z) (Read_Int_Int a+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) fixval+0) (- (* 3 i+3) 1)) (Read_Int_Int a+0 (- (* 3 i+3) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 3 i+0) 3) val3+0) i+1) (Read_Int_Int a+0 i+1))",
    ],
}
